# telos

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  telos.sh
.orchestra/adr/: 000-orchestra-as-agentic-reference-folder.md  001-skill-md-as-universal-contract.md  002-direct-api-over-subprocess.md  003-agentic-factory-as-skill-authoring-tool.md
.orchestra/specs/: bootstrap.md  zentempo-telos-integration.md
config/: agents.toml.example
docs/skill-example/: README.md
packs/apple-calendar/: README.md  agent.toml
packs/apple-calendar/skills/calendar/: SKILL.md
packs/arxiv/: README.md  agent.toml
packs/arxiv/skills/search/: SKILL.md
packs/arxiv/skills/summarize/: SKILL.md
packs/arxiv/skills/trending/: SKILL.md
packs/clickup/: README.md  agent.toml  mcp.json
packs/clickup/skills/: standup.md
packs/clickup/skills/standup/: SKILL.md
packs/hackernews/: README.md  agent.toml
packs/hackernews/skills/frontpage/: SKILL.md
packs/kairos/: README.md  agent.toml
packs/kairos/skills/interstitial/: SKILL.md
packs/kairos/skills/kickoff/: SKILL.md
packs/kairos/skills/monthly-summary/: SKILL.md
specs/: bootstrap.md
src/telos/: __init__.py  __main__.py  config.py  discord_bot.py  executor.py  installer.py  interactive.py  logger.py  main.py  mcp_client.py  provider.py  router.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_config_router.py  test_pipeline.py
tests/unit/: test_config.py  test_executor.py  test_installer.py  test_logger.py  test_main.py  test_mcp_client.py  test_provider.py  test_router.py
(+4 files in other folders)
