[project]
name = "telos"
version = "0.1.0"
description = "Personal agent runtime — route natural language to skills, execute via Claude Code"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "anthropic>=0.40",
    "tomli_w>=1.0",
    "mcp>=1.0",
    "openai>=1.0",
    "discord.py>=2.3",
]

[project.scripts]
telos = "telos.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
